--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Include the Qrious library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 </head>
-<body>
+//<body>
   <div class="offer-container">
     <img src="https://i.imgur.com/Txm55vN.jpeg" alt="Offer Image" class="offer-image">
     <p class="offer-text">Buy One Get One Free on Sandwiches!</p>
@@ -48,5 +48,5 @@
   </div>
 
   <script src="offerscript.js"></script> <!-- Link to JavaScript file -->
-</body>
+//</body>
 </html>
