--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Limited Time Offer</title>
-  <link rel="stylesheet" href="offerstyles.css"> <!-- Link to CSS file -->
+  <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
   <!-- Include the Qrious library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 </head>
-
+<body>
   <div class="offer-container">
     <img src="https://i.imgur.com/Txm55vN.jpeg" alt="Offer Image" class="offer-image">
     <p class="offer-text">Buy One Get One Free on Sandwiches!</p>
@@ -34,13 +34,8 @@
       <h3>Your QR Code:</h3>
       <canvas id="qr-code" width="200" height="200"></canvas>
     </div>
-    <!-- Expiration Message -->
-   
-    <div id="offer-expired" class="expired-message" style="display: none;">
-      <h3>Offer has expired!</h3>
-      <p>Stay tuned for more exciting offers.</p>
-    </div>
   </div>
 
-  <script src="offerscript.js"></script> <!-- Link to JavaScript file -->
+  <script src="script.js"></script> <!-- Link to JavaScript file -->
+</body>
 </html>
