--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
   <div class="offer-container">
     <img src="https://i.imgur.com/Txm55vN.jpeg" alt="Offer Image" class="offer-image">
+
+    <!-- Timer display -->
+    <div id="timer-container">
+      <h3>Time Remaining:</h3>
+      <div id="timer">Loading timer...</div>
+    </div>
     <p class="offer-text">Buy One Get One Free on Sandwiches!</p>
 
     <div id="offer-form">
