--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
     </div>
   </div>
 
+    <!-- Message container -->
+    <div id="message-container" style="display: none; text-align: center;">
+      <h2 id="message-title"></h2>
+      <p id="message-description"></p>
+    </div>
+  </div>
+
   <script src="offerscript.js"></script> <!-- Link to JavaScript file -->
 </body>
 </html>
